# klee

./: .gitignore  .vimspector.json  compile_commands.json  usefulcmd
include/klee/: Constraints.h  ExecutionState.h  Interpreter.h
include/klee/Core/: InterpreterManager.h  SummaryManager.h
include/klee/Expr/: ArrayCache.h  Constraints.h  Expr.h  ExprReplaceVisitor.h  Summary.h
include/klee/Module/: EnvContext.h  KModule.h
include/klee/util/: SymbolicArrayRefresher.h
lib/Core/: AddressSpace.cpp  AddressSpace.h  BUCSExecutor.cpp  CMakeLists.txt  CSExecutor.cpp  CSExecutor.h  CTXCSExecutor.cpp  CallCSEProxy.cpp  CallCSEProxy.h  ConcreteSummaryManager.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  InterpreterManager.cpp  Memory.cpp  Memory.h  ProtoExecutor.cpp  ProtoExecutor.h  Searcher.cpp  SpecialFunctionHandler.cpp  StatsTracker.cpp  Summary.h  SummaryManager.cpp  TDCSExecutor.cpp  UserSearcher.cpp  UserSearcher.h
lib/Expr/: ArrayCache.cpp  CMakeLists.txt  Constraints.cpp  Expr.cpp  SymbolicArrayRefresher.cpp  Updates.cpp
lib/Module/: CMakeLists.txt  IntervalInfo.cpp  KModule.cpp  Optimize.cpp  Passes.h  RecursionFinder.cpp
lib/Module/IntervalAnalysis/: CMakeLists.txt  IntervalAnalysis.cpp  basicblock.h  (+10 more)
lib/Module/IntervalInfo/: AbstractValue.h  CMakeLists.txt  Env.h  EnvMap.h  EqRels.h  Interval.cpp  Interval.h  IntervalInfo.cpp  IntervalInfo.h  MyDebug.h  Transfer.h
lib/Support/: Timer.cpp
scripts/: buildandrun
tools/klee/: main.cpp
unittests/: CMakeLists.txt
unittests/IntervalInfo/: CMakeLists.txt  IntervalInfoTest.cpp
